// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`makeFetchOpts handles a group 1`] = `
{
  "search": "fee",
  "slug": "comslug",
  "sortBy": "join",
}
`;

exports[`makeFetchOpts handles no group 1`] = `
{
  "search": "fee",
  "slug": undefined,
  "sortBy": "join",
}
`;

exports[`mapDispatchToProps returns the right keys 1`] = `
{
  "fetchMembers": [Function],
  "setSearch": [Function],
  "setSort": [Function],
  "showMember": [Function],
}
`;

exports[`mapStateToProps handles null value for lastViewedGroup 1`] = `
{
  "canInvite": false,
  "currentUser": SessionBoundModel {
    "_fields": {
      "groupRoles": {
        "items": [],
      },
      "id": 123,
      "membershipCommonRoles": {
        "items": [],
      },
    },
    "groupRoles": {
      "items": [],
    },
    "id": 123,
    "membershipCommonRoles": {
      "items": [],
    },
  },
  "fetchOpts": {
    "search": undefined,
    "slug": "tom",
    "sortBy": undefined,
  },
  "group": SessionBoundModel {
    "_fields": {
      "id": "10",
      "slug": "tom",
    },
  },
  "hasMore": undefined,
  "members": [],
  "pending": undefined,
  "search": undefined,
  "slug": "tom",
  "sortBy": undefined,
  "sortKeys": {
    "join": "Newest",
    "location": "Location",
    "name": "Name",
  },
}
`;
